--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   			<div id="navbar" class="navbar-collapse collapse">
   				<ul class="nav navbar-nav navbar-right">
   					<li><a href="#spyini">INICIO</a></li>
-  					<li><a href="#spyquien">QUIENES SOMOS</a></li>
   					<li><a href="#spyservices">SERVICIOS</a></li>
-  					<li><a href="#spygallery">ALQUILER DE OFICINAS</a></li>
+            <li><a href="#spyquien">QUIENES SOMOS</a></li>
+  					<li><a href="index2.html">ALQUILER DE OFICINAS</a></li>
             <li><a href="#spyproyects">PROYECTOS</a></li>
             <li><a href="#spycontact">CONTACTENOS</a></li>
   				</ul>
@@ -69,37 +69,208 @@
 
   <!---<div class="parallax"></div>!-->
 
-  <div class="container" id="spyquien">
+
+  <div class="serv">
 
 
-    <div class="row section-1">
-      <div class="col-lg-6 col-md-6 col-xs-12 left">
-        <h1 class="title-section-1">SCG BUSINESS CENTER</h1>
-        <p class="body-section-1">
-          Somos una empresa constarricense que desde el año 2016, ofrecemos a
-          nuestros clientes servicios multidisciplinarios, enmarcados en la
-          planificación y desarrollo de proyectos de negocio.
-        </p>
+        <div class="container">
+    <!--                FILA I                                -->
+          <div class="row center" id="spyservices">
+            <h2 class="title-services">Nuestros Servicios</h2>
+            <div class="col-lg-4 col-md-4 col-xs-12 left">
+              <div class="box-over-card">
+                <div class="over-card">DESARROLLO DE</div>
+                <div class="over-card"style="width:74%">PROYECTOS</div>
+                <div class="over-card">INMOBILIARIOS</div>
+              </div>
+              <div class="card">
+                <img src="img/card1.jpg" alt="Avatar" class="img-card">
 
-        <p class="body-section-1">
-          Como parte de nuestras funciones, realizamos acompañamiento en el
-          desarrollo de proyectos inmobiliarios, industriales, comerciales y
-          vialidad de proyectos, asesorias financieras y legales,
-          comercialización análisis de negocios, business broker
-          y alquiler de espacios de oficinas y virtuales.
-        </p>
-      </div>
+                  <p class="text-card">Ofrecemos servicios profesionales de estructuración y
+                    desarrollo de proyectos inmobiliarios, que satisfacen los
+                     requerimientos y necesidades de nuestros clientes antes,
+                      durante y después de finalizado el proyecto, cumpliendo
+                       con los estándares de calidad y plazos definidos.
+                     </p>
+                     <div class="leer"  data-valserv = "a" >
+                       Leer Mas
+                     </div>
+              </div>
+            </div>
 
-      <div class="col-lg-6 col-md-6 col-xs-12">
-        <img src="img/scg-business.jpg" class="img-responsive" alt="SCG">
-      </div>
-    </div>
+              <div class="col-lg-4 col-md-4 col-xs-12 left">
+                <div class="box-over-card">
+                  <div class="over-card" style="width:130%">VIALIDAD DE</div>
+                  <div class="over-card">PROYECTOS</div>
+                </div>
+                <div class="card">
+                  <img src="img/card2.jpg" alt="Avatar" class="img-card">
 
+                    <p class="text-card">Apoyamos a nuestros clientes durante el proceso
+                      de adquisición, estructuración de transacciones, negociación
+                      de contratos, seguimiento a inversiones realizadas; aportando
+                      la información requerida por compradores y financiadores.
+                    </p>
+                    <div class="leer"  data-valserv = "b" >
+                      Leer Mas
+                    </div>
+                </div>
+            </div>
+
+              <div class="col-lg-4 col-md-4 col-xs-12 left">
+                <div class="box-over-card">
+                  <div class="over-card">COMERCIALIZACIÓN</div>
+                </div>
+                <div class="card">
+                  <img src="img/card3.jpg" alt="Avatar" class="img-card">
+                    <p class="text-card">Proporcionamos a nuestros clientes:
+  	Estudios de mercado,
+  	Gestión de la relación comercial con clientes,
+   	Detección de  necesidades de mercado,
+  	Elaboración de Planes de ventas,
+  	Promoción de los servicios técnicos y logísticos,
+  	Ventas.
+
+                    </p>
+                    <div class="leer"  data-valserv = "c" >
+                      Leer Mas
+                    </div>
+                </div>
+            </div>
+
+          </div>
+    <!--            FIN    FILA I                                -->
+
+    <!--            FIN    FILA II                                -->
+          <div class="row center" >
+            <div class="col-lg-4 col-md-4 col-xs-12 left">
+              <div class="box-over-card">
+                <div class="over-card">ANALISIS DE</div>
+                <div class="over-card"style="width:79%">NEGOCIO</div>
+              </div>
+              <div class="card">
+                <img src="img/analisisdenegocioss.jpg" alt="Avatar" class="img-card">
+
+                  <p class="text-card">Acompañamos a nuestros clientes en la  toma de decisiones estratégicas, claves para el crecimiento de su negocio: 	Validación de requerimientos para reingeniería de procesos. Análisis y recomendación de soluciones de mejora continuas.
+   Validación y documentación de problemas y oportunidades de negocio.
+
+                     </p>
+                     <div class="leer"  data-valserv = "d" >
+                       Leer Mas
+                     </div>
+              </div>
+            </div>
+
+              <div class="col-lg-4 col-md-4 col-xs-12 left">
+                <div class="box-over-card">
+                  <div class="over-card" style="width:130%">ASESORIA</div>
+                  <div class="over-card">FINANCIERA</div>
+                </div>
+                <div class="card">
+                  <img src="img/financiero.jpg" alt="Avatar" class="img-card">
+
+                    <p class="text-card">Apoyamos a nuestros  clientes en cada fase del ciclo económico de su negocio, generando estrategias financieras con objetivos realizables.
+
+                    </p>
+                    <div class="leer"  data-valserv = "e" >
+                      Leer Mas
+                    </div>
+                </div>
+            </div>
+
+              <div class="col-lg-4 col-md-4 col-xs-12 left">
+                <div class="box-over-card">
+                  <div class="over-card">PERMISOLOGIA</div>
+                </div>
+                <div class="card">
+                  <img src="img/permisologia.jpg" alt="Avatar" class="img-card">
+                    <p class="text-card">Gestionamos permisos y documentaciones requeridas por las autoridades pertinentes, para el desarrollo de proyectos inmobiliarios: CFIA, INVU, Salud, AyA, Municipalidad, Bomberos , Senara, Setena, Minaet, Otros
+
+                    </p>
+                    <div class="leer"  data-valserv = "f" >
+                      Leer Mas
+                    </div>
+                </div>
+            </div>
+
+          </div>
+    <!--                FILA III                                -->
+          <div class="row center" >
+            <div class="col-lg-offset-2 col-md-offset-2 col-lg-4 col-md-4 col-xs-12 left">
+              <div class="box-over-card">
+                <div class="over-card">ACCESORIA</div>
+                <div class="over-card"style="width:74%">LEGAL</div>
+
+              </div>
+              <div class="card">
+                <img src="img/legal.jpg" alt="Avatar" class="img-card">
+
+                  <p class="text-card">Contamos con un staff de abogados que ofrece a nuestros clientes asesoramiento especializado y personalizado:
+
+
+
+                     </p>
+                     <div class="leer"  data-valserv = "g" >
+                       Leer Mas
+                     </div>
+              </div>
+            </div>
+
+              <div class="col-lg-4 col-md-4 col-xs-12 left">
+                <div class="box-over-card">
+                  <div class="over-card">BUSINESS</div>
+                  <div class="over-card">BROKER</div>
+                </div>
+                <div class="card">
+                  <img src="img/brooker.jpg" alt="Avatar" class="img-card">
+
+                    <p class="text-card">Ofrecemos a nuestros clientes servicios de apoyo e intermediación, tanto a nivel nacional  como  internacional:    
+  Organización y coordinación de agendas comerciales y de negocio.
+  Organizacion de Misiones exploratorias
+                    </p>
+
+
+                    <div class="leer"  data-valserv = "h" >
+                      Leer Mas
+                    </div>
+                </div>
+            </div>
+
+
+          </div>
+    <!--             FIN   FILA III                                -->
+        </div>
 
   </div>
 
+    <div class="container" id="spyquien">
 
 
+      <div class="row section-1">
+        <div class="col-lg-6 col-md-6 col-xs-12 left">
+          <h1 class="title-section-1">SCG BUSINESS CENTER</h1>
+          <p class="body-section-1">
+            Somos una empresa constarricense que desde el año 2016, ofrecemos a
+            nuestros clientes servicios multidisciplinarios, enmarcados en la
+            planificación y desarrollo de proyectos de negocio.
+          </p>
+
+          <p class="body-section-1">
+            Como parte de nuestras funciones, realizamos acompañamiento en el
+            desarrollo de proyectos inmobiliarios, industriales, comerciales y
+            vialidad de proyectos, asesorias financieras y legales,
+            comercialización análisis de negocios, business broker
+            y alquiler de espacios de oficinas y virtuales.
+          </p>
+        </div>
+
+        <div class="col-lg-6 col-md-6 col-xs-12">
+          <img src="img/scg-business.jpg" class="img-responsive" alt="SCG">
+        </div>
+      </div>
+
+
+    </div>
 
   <div id="section-2">
 
@@ -123,180 +294,6 @@
 
   </div>
 
-
-
-<div class="serv">
-
-
-      <div class="container">
-  <!--                FILA I                                -->
-        <div class="row center" id="spyservices">
-          <h2 class="title-services">Nuestros Servicios</h2>
-          <div class="col-lg-4 col-md-4 col-xs-12 left">
-            <div class="box-over-card">
-              <div class="over-card">DESARROLLO DE</div>
-              <div class="over-card"style="width:74%">PROYECTOS</div>
-              <div class="over-card">INMOBILIARIOS</div>
-            </div>
-            <div class="card">
-              <img src="img/card1.jpg" alt="Avatar" class="img-card">
-
-                <p class="text-card">Ofrecemos servicios profesionales de estructuración y
-                  desarrollo de proyectos inmobiliarios, que satisfacen los
-                   requerimientos y necesidades de nuestros clientes antes,
-                    durante y después de finalizado el proyecto, cumpliendo
-                     con los estándares de calidad y plazos definidos.
-                   </p>
-                   <div class="leer"  data-valserv = "a" >
-                     Leer Mas
-                   </div>
-            </div>
-          </div>
-
-            <div class="col-lg-4 col-md-4 col-xs-12 left">
-              <div class="box-over-card">
-                <div class="over-card" style="width:130%">VIALIDAD DE</div>
-                <div class="over-card">PROYECTOS</div>
-              </div>
-              <div class="card">
-                <img src="img/card2.jpg" alt="Avatar" class="img-card">
-
-                  <p class="text-card">Apoyamos a nuestros clientes durante el proceso
-                    de adquisición, estructuración de transacciones, negociación
-                    de contratos, seguimiento a inversiones realizadas; aportando
-                    la información requerida por compradores y financiadores.
-                  </p>
-                  <div class="leer"  data-valserv = "b" >
-                    Leer Mas
-                  </div>
-              </div>
-          </div>
-
-            <div class="col-lg-4 col-md-4 col-xs-12 left">
-              <div class="box-over-card">
-                <div class="over-card">COMERCIALIZACIÓN</div>
-              </div>
-              <div class="card">
-                <img src="img/card3.jpg" alt="Avatar" class="img-card">
-                  <p class="text-card">Proporcionamos a nuestros clientes:
-	Estudios de mercado,
-	Gestión de la relación comercial con clientes,
- 	Detección de  necesidades de mercado,
-	Elaboración de Planes de ventas,
-	Promoción de los servicios técnicos y logísticos,
-	Ventas.
-
-                  </p>
-                  <div class="leer"  data-valserv = "c" >
-                    Leer Mas
-                  </div>
-              </div>
-          </div>
-
-        </div>
-  <!--            FIN    FILA I                                -->
-
-  <!--            FIN    FILA II                                -->
-        <div class="row center" >
-          <div class="col-lg-4 col-md-4 col-xs-12 left">
-            <div class="box-over-card">
-              <div class="over-card">ANALISIS DE</div>
-              <div class="over-card"style="width:79%">NEGOCIO</div>
-            </div>
-            <div class="card">
-              <img src="img/analisisdenegocioss.jpg" alt="Avatar" class="img-card">
-
-                <p class="text-card">Acompañamos a nuestros clientes en la  toma de decisiones estratégicas, claves para el crecimiento de su negocio: 	Validación de requerimientos para reingeniería de procesos. Análisis y recomendación de soluciones de mejora continuas.
- Validación y documentación de problemas y oportunidades de negocio.
-
-                   </p>
-                   <div class="leer"  data-valserv = "d" >
-                     Leer Mas
-                   </div>
-            </div>
-          </div>
-
-            <div class="col-lg-4 col-md-4 col-xs-12 left">
-              <div class="box-over-card">
-                <div class="over-card" style="width:130%">ASESORIA</div>
-                <div class="over-card">FINANCIERA</div>
-              </div>
-              <div class="card">
-                <img src="img/financiero.jpg" alt="Avatar" class="img-card">
-
-                  <p class="text-card">Apoyamos a nuestros  clientes en cada fase del ciclo económico de su negocio, generando estrategias financieras con objetivos realizables.
-
-                  </p>
-                  <div class="leer"  data-valserv = "e" >
-                    Leer Mas
-                  </div>
-              </div>
-          </div>
-
-            <div class="col-lg-4 col-md-4 col-xs-12 left">
-              <div class="box-over-card">
-                <div class="over-card">PERMISOLOGIA</div>
-              </div>
-              <div class="card">
-                <img src="img/permisologia.jpg" alt="Avatar" class="img-card">
-                  <p class="text-card">Gestionamos permisos y documentaciones requeridas por las autoridades pertinentes, para el desarrollo de proyectos inmobiliarios: CFIA, INVU, Salud, AyA, Municipalidad, Bomberos , Senara, Setena, Minaet, Otros
-
-                  </p>
-                  <div class="leer"  data-valserv = "f" >
-                    Leer Mas
-                  </div>
-              </div>
-          </div>
-
-        </div>
-  <!--                FILA III                                -->
-        <div class="row center" >
-          <div class="col-lg-offset-2 col-md-offset-2 col-lg-4 col-md-4 col-xs-12 left">
-            <div class="box-over-card">
-              <div class="over-card">ACCESORIA</div>
-              <div class="over-card"style="width:74%">LEGAL</div>
-
-            </div>
-            <div class="card">
-              <img src="img/legal.jpg" alt="Avatar" class="img-card">
-
-                <p class="text-card">Contamos con un staff de abogados que ofrece a nuestros clientes asesoramiento especializado y personalizado:
-
-
-
-                   </p>
-                   <div class="leer"  data-valserv = "g" >
-                     Leer Mas
-                   </div>
-            </div>
-          </div>
-
-            <div class="col-lg-4 col-md-4 col-xs-12 left">
-              <div class="box-over-card">
-                <div class="over-card">BUSINESS</div>
-                <div class="over-card">BROKER</div>
-              </div>
-              <div class="card">
-                <img src="img/brooker.jpg" alt="Avatar" class="img-card">
-
-                  <p class="text-card">Ofrecemos a nuestros clientes servicios de apoyo e intermediación, tanto a nivel nacional  como  internacional:    
-Organización y coordinación de agendas comerciales y de negocio.
-Organizacion de Misiones exploratorias
-                  </p>
-
-
-                  <div class="leer"  data-valserv = "h" >
-                    Leer Mas
-                  </div>
-              </div>
-          </div>
-
-
-        </div>
-  <!--             FIN   FILA III                                -->
-      </div>
-
-</div>
 
 <div class="container">
   <div class="row our center">
@@ -364,8 +361,8 @@ Organizacion de Misiones exploratorias
 
         </div>
         <p class="avatar-text">
-          Contador privado, con estudios en Administración de Empresas. Posee 15
-          años de experiencia en Asesorías de bienes raíces y Gestoría de negocios.
+          Ingeniero Civil registrado, con amplia experiencia en construcción
+          e infraestructura, presupuestos, análisis de costos e inspección.
         </p>
       </div>
     </div>
@@ -376,7 +373,7 @@ Organizacion de Misiones exploratorias
       <h2 class="title-services center">Nuestros Proyectos</h2>
       <div id="owl-demo" class="owl-carousel">
         <div class="item">
-          <img src="img/a3.png" alt="">
+          <img src="img/a3.png" alt="" data-img='["img/bodega1.png","img/bodega2.png"]'>
           <h4 class="item-title">
             Ofi-Bodegas La Lima
           </h4>
@@ -384,7 +381,7 @@ Organizacion de Misiones exploratorias
           ​</p>
         </div>
         <div class="item">
-          <img src="img/carousel1.jpg" alt="">
+          <img src="img/carousel1.jpg" alt="" data-img='["img/a3.png","img/a2.png","img/carousel1.jpg"]' data-index="0">
           <h4 class="item-title">
             Club Guaira
           </h4>
@@ -392,7 +389,7 @@ Organizacion de Misiones exploratorias
           ​</p>
         </div>
         <div class="item">
-          <img src="img/a2.png" alt="">
+          <img src="img/a2.png" alt="" data-img='["img/bodega1.png","img/bodega2.png"]'>
           <h4 class="item-title">
              Hostal Jaco
           </h4>
@@ -400,7 +397,7 @@ Organizacion de Misiones exploratorias
           ​</p>
         </div>
         <div class="item">
-          <img src="img/a1.png" alt="">
+          <img src="img/a1.png" alt="" data-img='["img/bodega1.png","img/bodega2.png"]'>
           <h4 class="item-title">
             Jacó Blú
           </h4>
@@ -409,7 +406,7 @@ Organizacion de Misiones exploratorias
         </div>
 
         <div class="item">
-          <img src="img/a5.png" alt="">
+          <img src="img/a5.png" alt="" data-img='["img/bodega1.png","img/bodega2.png"]'>
           <h4 class="item-title">
             Via Oro
           </h4>
