--- a/index2.html
+++ b/index2.html
@@ -24,12 +24,12 @@
   			</div>
   			<div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#spytop">INICIO</a></li>
-            <li><a href="#spyservices">QUIENES SOMOS</a></li>
-            <li><a href="#spycontact">SERVICIOS</a></li>
-            <li><a href="#spygallery">ALQUILER DE OFICINAS</a></li>
-            <li><a href="#spyours">PROYECTOS</a></li>
-            <li><a href="#spyours">CONTACTENOS</a></li>
+            <li><a href="index.html">INICIO</a></li>
+            <li><a href="index.html#spycontact">SERVICIOS</a></li>
+            <li><a href="index.html#spyquien">QUIENES SOMOS</a></li>
+            <li><a href="index.html#spygallery">ALQUILER DE OFICINAS</a></li>
+            <li><a href="index.html#spyproyects">PROYECTOS</a></li>
+            <li><a href="index.html#spycontact">CONTACTENOS</a></li>
           </ul>
         </div>
   		</div>
@@ -56,7 +56,7 @@
             internacional Santamaría.
         </p>
 
-       
+
 
         </div>
 
@@ -201,7 +201,7 @@
              </div>
            </div>
       </div>
- 
+
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
