--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,7 @@
   	<!-- //Close Fixed Nav -->
 
     <div class="banner">
-      <img src="img/oficinaweb.jpg" class="img-responsive" alt="SCG">
+      <img src="img/oficina3.png" class="img-responsive" alt="SCG">
       <h1 class="banner-text">ALQUILER DE OFICINAS </h1>
     </div>
 
@@ -90,7 +90,7 @@
       <div class="row">
         <h2 class="title-2">Oficinas Temporales</h2>
         <div class="col-lg-6 col-md-6 col-xs-12">
-          <img src="img/oficina3.jpg" class="img-responsive" alt="SCG">
+          <img src="img/oficinaweb.png" class="img-responsive" alt="SCG">
           <div class="llamenos"><div class="in-llamenos">LLAMENOS AL <strong>+(506) 8857 5353</strong></div></div>
         </div>
         <div class="col-lg-6 col-md-6 col-xs-12 sectionoficina">
