--- a/index.html
+++ b/index.html
@@ -425,6 +425,24 @@
 
 
 <div class="form-contact">
+  <form>
+    <div class="form-group">
+      <label for="name">Nombre y Apellido:</label>
+      <input type="email" class="form-control" id="name">
+    </div>
+    <div class="form-group">
+      <label for="telefono">Telefono:</label>
+      <input type="text" class="form-control" id="telefono">
+    </div>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="text" class="form-control" id="email">
+    </div>
+    <div class="form-group">
+      <label for="mensaje">Mensaje:</label>
+      <textarea class="form-control" id="mensaje"></textarea>
+    </div>
+  </form>
   <div class="contactar">
     <div class="cont" >
       CONTACTAR
