--- a/index.html
+++ b/index.html
@@ -381,6 +381,14 @@
           ​</p>
         </div>
         <div class="item">
+          <img src="img/ta3.png" alt="" data-img='["img/ta2.png","img/ta1.png","img/ta3.png"]' data-index="0">
+          <h4 class="item-title">
+            Hotel Tamoya
+          </h4>
+          <p class="item-body">Tecnología y diseño para el entretenimiento.
+          ​</p>
+        </div>
+        <div class="item">
           <img src="img/carousel1.jpg" alt="" data-img='["img/a3.png","img/a2.png","img/carousel1.jpg"]' data-index="0">
           <h4 class="item-title">
             Club Guaira
