--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       <h2 class="title-services center">Nuestros Proyectos</h2>
       <div id="owl-demo" class="owl-carousel">
         <div class="item">
-          <img src="img/a3.png" alt="" data-img='["img/bodega1.png","img/bodega2.png"]'>
+          <img src="img/a3.png" alt="" data-img='["img/bodega1.png","img/bodega2.png"]' data-index="0">
           <h4 class="item-title">
             Ofi-Bodegas La Lima
           </h4>
@@ -389,7 +389,7 @@
           ​</p>
         </div>
         <div class="item">
-          <img src="img/carousel1.jpg" alt="" data-img='["img/a3.png","img/a2.png","img/carousel1.jpg"]' data-index="0">
+          <img src="img/club3.png" alt="" data-img='["img/club1.png","img/club2.png","img/club3.png"]' data-index="0">
           <h4 class="item-title">
             Club Guaira
           </h4>
@@ -397,7 +397,7 @@
           ​</p>
         </div>
         <div class="item">
-          <img src="img/a2.png" alt="" data-img='["img/bodega1.png","img/bodega2.png"]'>
+          <img src="img/a2.png" alt="" data-img='["img/jaco1.png" , "img/jaco2.png", "img/jaco3.png", "img/jaco.png" , "img/a2.png" ]' data-index="0">
           <h4 class="item-title">
              Hostal Jaco
           </h4>
@@ -405,7 +405,7 @@
           ​</p>
         </div>
         <div class="item">
-          <img src="img/a1.png" alt="" data-img='["img/bodega1.png","img/bodega2.png"]'>
+          <img src="img/a1.png" alt="" data-img='["img/jacoblu2.png" , "img/jacoblu3.png" , "img/jacoblu.png" ,"img/a1.png"]' data-index="0">
           <h4 class="item-title">
             Jacó Blú
           </h4>
@@ -414,7 +414,7 @@
         </div>
 
         <div class="item">
-          <img src="img/a5.png" alt="" data-img='["img/bodega1.png","img/bodega2.png"]'>
+          <img src="img/a5.png" alt="" data-img='["img/viaoro1.png","img/viaoro2.png","img/viaoro3.png"]' data-index="0">
           <h4 class="item-title">
             Via Oro
           </h4>
