--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       <h2 class="title-services center">Nuestros Proyectos</h2>
       <div id="owl-demo" class="owl-carousel">
         <div class="item">
-          <img src="img/a3.png" alt="" data-img='["img/ofice1.png","img/ofice2.png","img/ofice.png","img/a3.png"]' data-index="0">
+          <img src="img/a3.png" data-img='["img/ofice1.png","img/ofice2.png","img/ofice.png","img/a3.png"]' data-index="0">
           <h4 class="item-title">
             Ofi-Bodegas La Lima
           </h4>
