--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
          <h1>Construimos Tu Futuro</h1>
 
          <div class="banner-button">
-              <div class="button" >
+              <a href="#spycontact" class="button"  >
                 Contactenos
-              </div>
+              </a>
             </div>
         </div>
 
