--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
               <div class="col-lg-4 col-md-4 col-xs-12 left">
                 <div class="box-over-card">
-                  <div class="over-card" style="width:130%">VIALIDAD DE</div>
+                  <div class="over-card" style="width:130%">VIABILIDAD DE</div>
                   <div class="over-card">PROYECTOS</div>
                 </div>
                 <div class="card">
@@ -250,7 +250,7 @@
         <div class="col-lg-6 col-md-6 col-xs-12 left">
           <h1 class="title-section-1">SCG BUSINESS CENTER</h1>
           <p class="body-section-1">
-            Somos una empresa constarricense que desde el año 2016, ofrecemos a
+            Somos una empresa constarricense que desde el año 2006, ofrecemos a
             nuestros clientes servicios multidisciplinarios, enmarcados en la
             planificación y desarrollo de proyectos de negocio.
           </p>
@@ -258,7 +258,7 @@
           <p class="body-section-1">
             Como parte de nuestras funciones, realizamos acompañamiento en el
             desarrollo de proyectos inmobiliarios, industriales, comerciales y
-            vialidad de proyectos, asesorias financieras y legales,
+            Viabilidad de Proyectos, asesorias financieras y legales,
             comercialización análisis de negocios, business broker
             y alquiler de espacios de oficinas y virtuales.
           </p>
@@ -286,7 +286,7 @@
         <p class="texto-section-2">
           En <strong class="st1">SCG Business Center</strong> nos hemos propuesto mantener relaciones
           altamente productivas con nuestros clientes, reforzando nuestros
-          valores de <strong class="st2">Excelencia, confianza, honestidad e innovación.</strong>
+          valores de <strong class="st2">Excelencia, Confianza, Honestidad e Innovación.</strong>
         </p>
       </div>
 
@@ -383,7 +383,7 @@
         <div class="item">
           <img src="img/ta3.png" alt="" data-img='["img/ta2.png","img/ta1.png","img/ta3.png"]' data-index="0">
           <h4 class="item-title">
-            Hotel Tamoya
+            Hotel Tramonto
           </h4>
           <p class="item-body">Tecnología y diseño para el entretenimiento.
           ​</p>
@@ -538,7 +538,7 @@ var valor = {
       img : "img/lcard1.jpg"
     },
     b:{
-      titulo : "VIALIDAD DE PROYECTOS",
+      titulo : "Viabilidad de Proyectos",
        texto : "<p>Apoyamos a nuestros clientes durante el proceso de adquisición, estructuración de transacciones, negociación de contratos, seguimiento a inversiones realizadas; aportando la información requerida por compradores y financiadores. </p><ul><li>Administración de riesgos para adquisicion de Negocios o Proyectos. </li><li>Due diligence de Bienes Inmuebles, Construcción, Inteligencia geo-demográfica. </li><li>International Financial Reporting Standards (IFRS) de Construcción y Bienes Raíces. </li><li>Reporte de Avances de Proyectos. </li><li>Asistencia en el seguimiento y monitoreo del proyecto.</li><li>Auditoría de construcción.</li></ul>",
       img : "img/lcard2.jpg"
     },
