--- a/index2.html
+++ b/index2.html
@@ -68,37 +68,52 @@
       <br>
       <div class="row">
         <div class="col-lg-2 col-md-2 col-xs-6">
-          <div class="caja caja1"><div class="in">Servicio de Fax</div></div>
-        </div>
-        <div class="col-lg-2 col-md-2 col-xs-6">
-          <div class="caja caja2"><div class="in">Desvío / transferencias de llamadas</div></div>
+          <div class="caja caja4"><div class="in">Servicio Personalizado a clientes</div></div>
         </div>
         <div class="col-lg-2 col-md-2 col-xs-6">
           <div class="caja caja3"><div class="in">Linea telefonica exclusiva</div></div>
         </div>
         <div class="col-lg-2 col-md-2 col-xs-6">
-          <div class="caja caja4"><div class="in">Servicio Personalizado a clientes</div></div>
+          <div class="caja caja2"><div class="in">Desvío / transferencias de llamadas</div></div>
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-6">
+         <div class="col-lg-2 col-md-2 col-xs-6">
           <div class="caja caja5"><div class="in">Apartado postal en Costa Rica y en USA</div></div>
         </div>
         <div class="col-lg-2 col-md-2 col-xs-6">
           <div class="caja caja6"><div class="in">Servicio de mensajeria</div></div>
         </div>
+        <div class="col-lg-2 col-md-2 col-xs-6">
+          <div class="caja caja1"><div class="in">Servicio de Fax</div></div>
+        </div>
+
       </div>
+
+      <div class="row">
+        <h2 class="title-2">Oficinas Fisicas</h2>
+        <div class="col-lg-6 col-md-6 col-xs-12">
+          <img src="img/oficinanew.png" class="img-responsive" alt="SCG">
+          <div class="llamenos"><div class="in-llamenos">LLAMENOS AL <strong>+(506) 2215 5000</strong></div></div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-xs-12 sectionoficina">
+          <p class="body-section-1">Nuestra perfecta ubicación en Guachipelin Escazu le permitirá disfrutar de su oficina privada en la mejor zona comercial y empresarial del país. Completamente amobladas y con tecnología de punta, SCG Le ofrece oficinas físicas permanentes para aumentar tanto su imagen corporativa como su productividad. Al tener los servicios de su oficina física podrá disfrutar de las areas de cocina y café que son un espacio perfecto para tomar un descanso corto durante la jornada laboral.
+
+          </p>
+
+        </div>
+      </div>
+
       <br>
       <div class="row">
         <h2 class="title-2">Oficinas Temporales</h2>
         <div class="col-lg-6 col-md-6 col-xs-12">
           <img src="img/oficinaweb.png" class="img-responsive" alt="SCG">
-          <div class="llamenos"><div class="in-llamenos">LLAMENOS AL <strong>+(506) 8857 5353</strong></div></div>
+          <div class="llamenos"><div class="in-llamenos">LLAMENOS AL <strong>+(506) 2215 5000</strong></div></div>
         </div>
         <div class="col-lg-6 col-md-6 col-xs-12 sectionoficina">
-          <p class="body-section-1">Las oficinas están climatizadas y amobladas en su totalidad con
-            escritorios ejecutivos, sillones de buen talle, sillas para
-            visitantes, archivo, teléfonos digitales hand-free con conexión
-            VoIP para llamadas internacionales y conexión inalámbrica para
-            Internet de alta velocidad.
+          <p class="body-section-1">Tiene una reunión de ultima hora ¿no tiene oficina actualmente?  ¿desea privacidad y confort? 
+          <br>
+          Tenemos la solución : Nuestro servicio de oficinas temporal disponible para su uso por horas, le permitirá poder disfrutar de oficinas ejecutivas con  parqueo , aire acondicionado , servicio telefónico de larga distancia y  wifi por las horas que estime necesario.Solo llame y reserve con anticipación y de la impresión que tanto necesita su negocio al mejor costo del mercado.  Otros beneficios de nuestras oficinas temporales son:
+
           </p>
           <ul id="ul">
             <li class="li"> &nbsp;&nbsp;Oficinas y salas de reuniones lujosamente amobladas.</li>
@@ -117,7 +132,7 @@
         <h2 class="title-2">Oficinas Virtuales</h2>
         <div class="col-lg-6 col-md-6 col-xs-12">
           <img src="img/oficina4.jpg" class="img-responsive" alt="SCG">
-          <div class="llamenos"><div class="in-llamenos">LLAMENOS AL <strong>+(506) 8857 5353</strong></div></div>
+          <div class="llamenos"><div class="in-llamenos">LLAMENOS AL <strong>+(506) 2215 5000</strong></div></div>
         </div>
         <div class="col-lg-6 col-md-6 col-xs-12 sectionoficina">
           <p class="body-section-1">Este novedoso concepto de oficina es una opción para la
@@ -138,13 +153,16 @@
     margin-bottom: 30px;
 ">Virtual Oro</h2>
           <ul id="ul">
-            <li class="li"> &nbsp;&nbsp;Domicilio físico de su empresa en SCG-Business Centre</li>
+            <li class="li"> &nbsp;&nbsp;Domicilio físico de su empresa en SCG Business Centre</li>
             <li class="li"> &nbsp;&nbsp;Toma y reporte de mensajes</li>
             <li class="li"> &nbsp;&nbsp;Descuentos en salas y oficinas</li>
             <li class="li"> &nbsp;&nbsp;Atención de visitas</li>
             <li class="li"> &nbsp;&nbsp;Recepción de paquetes y documentos</li>
             <li class="li"> &nbsp;&nbsp;Manejo ilimitado de llamadas entrando</li>
-            <li class="li"> &nbsp;&nbsp;Servicio desvío/transferencia de llamadas</li>
+            <li class="li"> &nbsp;&nbsp;Servicio de contestadora de llamadas personalizadas</li>
+            <li class="li"> &nbsp;&nbsp;Servicio Bilingüe</li>
+            <li class="li"> &nbsp;&nbsp;Servicio de desvió/transferencia de llamadas</li>
+            <li class="li"> &nbsp;&nbsp;Estacionamiento libre durante sus Visitas al Business Centre</li>
             <li class="li"> &nbsp;&nbsp;Apartado Postal local y en USA</li>
           </ul>
         </div>
@@ -153,13 +171,19 @@
     margin-bottom: 30px;
 ">Virtual Platinum</h2>
           <ul id="ul">
-            <li class="li"> &nbsp;&nbsp;Oficinas y salas de reuniones lujosamente amobladas.</li>
-            <li class="li"> &nbsp;&nbsp;Ambiente de alta tecnología.</li>
-            <li class="li"> &nbsp;&nbsp;Líneas telefónicas y de fax únicas para cada cliente.</li>
-            <li class="li"> &nbsp;&nbsp;Servicios de contestador de llamadas personalizado.</li>
-            <li class="li"> &nbsp;&nbsp;Acceso a internet de alta velocidad.</li>
-            <li class="li"> &nbsp;&nbsp;Servicio de apoyo administrativo en el sitio.</li>
-            <li class="li"> &nbsp;&nbsp;Arrendamiento de oficinas a corto o largo plazo.</li>
+            <li class="li"> &nbsp;&nbsp;Domicilio físico de su empresaEn SCG Business Centre.</li>
+            <li class="li"> &nbsp;&nbsp;Toma y reporte de mensajes.</li>
+            <li class="li"> &nbsp;&nbsp;Descuento en uso de salas y oficinas</li>
+            <li class="li"> &nbsp;&nbsp;Atención de visitas</li>
+            <li class="li"> &nbsp;&nbsp;Recepción de paquetes y documentos</li>
+            <li class="li"> &nbsp;&nbsp;Manejo ilimitado de llamadas entrantes.</li>
+            <li class="li"> &nbsp;&nbsp;Servicio de contestadora de llamadas personalizadas.</li>
+             <li class="li"> &nbsp;&nbsp;Servicio Bilingüe </li>
+             <li class="li"> &nbsp;&nbsp;Servicio de desvió/transferencia de llamadas</li>
+             <li class="li"> &nbsp;&nbsp;Estacionamiento libre durante sus Visitas al Business Centre</li>
+             <li class="li"> &nbsp;&nbsp;Apartado postal local y en USA</li>
+             <li class="li"> &nbsp;&nbsp;Cuatro horas mensuales de uso de oficina o sala de reuniones</li>
+             <li class="li"> &nbsp;&nbsp;Seis mensajerías al mes dentro del gran área metropolitana.</li>
           </ul>
         </div>
       </div>
