--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ek+Mukta:300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/index2.css">
     <link rel="stylesheet" href="css/contact.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   </head>
   <body>
 
@@ -110,7 +111,7 @@
           <div class="llamenos"><div class="in-llamenos">LLAMENOS AL <strong>+(506) 2215 5000</strong></div></div>
         </div>
         <div class="col-lg-6 col-md-6 col-xs-12 sectionoficina">
-          <p class="body-section-1">Tiene una reunión de ultima hora ¿no tiene oficina actualmente?  ¿desea privacidad y confort? 
+          <p class="body-section-1">Tiene una reunión de ultima hora ¿no tiene oficina actualmente?  ¿desea privacidad y confort?
           <br>
           Tenemos la solución : Nuestro servicio de oficinas temporal disponible para su uso por horas, le permitirá poder disfrutar de oficinas ejecutivas con  parqueo , aire acondicionado , servicio telefónico de larga distancia y  wifi por las horas que estime necesario.Solo llame y reserve con anticipación y de la impresión que tanto necesita su negocio al mejor costo del mercado.  Otros beneficios de nuestras oficinas temporales son:
 
