--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
          <div class="banner-button">
               <a href="#spycontact" class="button"  >
-                Contactenos
+                Contáctenos
               </a>
             </div>
         </div>
@@ -402,7 +402,7 @@
           <h4 class="item-title">
              Hostal Jaco
           </h4>
-          <p class="item-body">Un concepto nuevo para un mercado especifico.
+          <p class="item-body">Un concepto nuevo para un mercado específico.
           ​</p>
         </div>
         <div class="item">
@@ -440,7 +440,7 @@
       <input type="email" class="form-control" id="name">
     </div>
     <div class="form-group">
-      <label for="telefono">Telefono:</label>
+      <label for="telefono">Teléfono:</label>
       <input type="text" class="form-control" id="telefono">
     </div>
     <div class="form-group">
@@ -475,7 +475,7 @@
       <img src="img/logo.png" class="contact-logo" alt="SCG">
       <div class="telefonos">
         <h2 class="telefono">(506) 2215 5000</h2>
-        <p class="sub-telefono center">Telefono</p>
+        <p class="sub-telefono center">Teléfono</p>
       </div>
     </div>
     <p class="address"><strong>Dirección :</strong>Edificio SCG, de la rotonda de Multiplaza de Escazú, 900 metros norte, Guachipelin, Costa Rica.
